2007-02-04  Kazu Hirata  <kazu@codesourcery.com>

	* config/m32c/bitops.md, config/m32c/jump.md,
	config/m32c/m32c.c, config/m32c/m32c.h, config/m32r/m32r.c,
	config/m32r/m32r.h, config/m32r/m32r.md,
	config/m32r/predicates.md, config/m68hc11/larith.asm,
	config/m68hc11/m68hc11.c, config/m68hc11/m68hc11.h,
	config/m68k/m68k.h, config/mcore/mcore.md, config/mips/4k.md,
	config/mips/mips-protos.h, config/mips/mips.c,
	config/mips/mips.h, config/mips/mips.md, config/mips/mips16.S,
	config/mn10300/mn10300.h, config/mn10300/predicates.md,
	config/mt/mt.c, config/mt/mt.h, config/mt/mt.md: Follow
	spelling conventions.

	* config/v850/v850.c, config/v850/v850.h, config/v850/v850.md:
	Follow spelling conventions.

2007-02-03  Douglas Gregor  <doug.gregor@gmail.com>

       * c-opts.c (c_common_post_options): If C++0x mode is enabled, don't
       warn about C++0x compatibility.
	
2007-02-04  Kazu Hirata  <kazu@codesourcery.com>

	* config/h8300/h8300.c, config/h8300/h8300.h,
	config/h8300/h8300.md: Follow spelling conventions.

2007-02-03  Uros Bizjak  <ubizjak@gmail.com>

	PR middle-end/30667
	* combine.c (try_combine): Do not substitute source operand
	with constants wider than 2 * HOST_BITS_PER_WIDE_INT.

2007-02-03  Jan Hubicka  <jh@suse.cz>

	PR gcov-profile/30650
	* value-prof.c (stringop_block_profile): Fix handling of size counter;
	do not divide by zero for never executed counters.
	(tree_find_values_to_profile): Fix counters.
	* gcov-ui.h (GCOV_COUNTER_AVERAGE, GCOV_COUNTER_IOR): Fix comments.

2007-02-03  Ian Lance Taylor  <iant@google.com>

	* lower-subreg.c (simple_move_operand): New static function,
	broken out of simple_move.  Reject LABEL_REF, SYMBOL_REF, and HIGH
	operands.
	(simple_move): Call simple_move_operand.
	(find_decomposable_subregs): Add special handling of MEMs.
	(can_decompose_p): Rename from cannot_decompose_p.  Reverse
	meaning of return value.  If we see a hard register, test whether
	it can store a word_mode value.  Change all callers.
